--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "chat-app": "file:..",
     "events": "^3.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
